# SurfaceLog

./: .gitignore  README.md  pyproject.toml  requirements.txt
extractions/: 03-02-2026_13-34.csv  03-02-2026_13-34.json  03-02-2026_13-42.csv  03-02-2026_13-42.json  03-02-2026_13-47.csv  03-02-2026_13-47.json  03-02-2026_14-01.csv  03-02-2026_14-01.json  03-02-2026_14-25.csv  03-02-2026_14-25.json  03-02-2026_15-19.csv  03-02-2026_15-19.json  03-02-2026_16-00.csv  03-02-2026_16-00.json  03-02-2026_16-04.csv  03-02-2026_16-04.json  03-02-2026_16-04.txt  03-02-2026_16-09.csv  03-02-2026_16-09.json  03-02-2026_16-29.csv  03-02-2026_16-29.json  03-02-2026_16-36.csv  03-02-2026_16-36.json  03-02-2026_16-36.txt  03-02-2026_16-55.csv  03-02-2026_16-55.json  09-02-2026_17-26.csv  09-02-2026_17-26.json  09-03-2026_16-28.csv  09-03-2026_16-28.json  09-03-2026_16-28.txt  28-01-2026_15-29.csv  28-01-2026_15-29.json  28-01-2026_15-29.txt  resultado.csv  resultado.json  scan_8-8-8-8_09-03-2026_16-31.json  scan_8-8-8-8_09-03-2026_16-33.csv  test.json
surfacelog/: README.md  __main__.py  cli.py  scan.py
surfacelog.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
surfacelog/core/: analyzer.py  classifier.py  detector.py  events.py  models.py  off_hours_detector.py  parser.py  rules.py
surfacelog/core/detectors/: base.py  brute_force.py  (+4 more)
surfacelog/reports/: csv_report.py  json_report.py  registry.py  txt_report.py
surfacelog/rules/: security.yaml
tests/: test_analyzer.py  test_analyzer_detailed.py  test_classifier.py  test_detectors.py  test_parser.py  test_surfacescan.py
